force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/LLC_BI__Requirement_Template__mdt.object-meta.xml
<CustomObject>
    <description>A Requirement Template serves as a model used to create a Requirement for a particular Checklist.</description>
    <label>Requirement Template</label>
    <pluralLabel>Requirement Templates</pluralLabel>
</CustomObject>