force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Assignee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assignee__c</fullName>
    <description>This optional field contains the id of the User or Queue to whom Requirements based on this model are assigned. It should be copied to the Owner field on Requirement records created from this template.</description>
    <inlineHelpText>This optional field contains the id of the User or Queue to whom Requirements based on this model are assigned. It should be copied to the Owner field on Requirement records created from this template.</inlineHelpText>
    <label>Assignee</label>
    <length>18</length>
    <type>Text</type>
</CustomField>