force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Checkpoint_Context__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Checkpoint_Context__c</fullName>
    <description>This optional field contains a reference to a Context object which associates a SObjectField to a SObjectType.</description>
    <label>Checkpoint Context</label>
    <referenceTo>LLC_BI__Context__mdt</referenceTo>
    <relationshipLabel>Requirement Templates</relationshipLabel>
    <relationshipName>Requirement_Templates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>