force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Checkpoint_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Checkpoint_Value__c</fullName>
    <description>This optional field contains a value that represents a stage in a transaction when this requirement will be used.</description>
    <inlineHelpText>A value that represents a stage in a transaction when this requirement will be used.</inlineHelpText>
    <label>Checkpoint Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>