force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Expected_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
    <description>This optional field contains the number of days expected to complete Requirements based on this model.  It should be copied to the Expected Durations Days field on Requirement records created from this template.</description>
    <inlineHelpText>This optional field contains the number of days expected to complete Requirements based on this model.  It should be copied to the Expected Durations Days field on Requirement records created from this template.</inlineHelpText>
    <label>Expected Duration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>