force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This optional field specifies the sequence in which Requirements based on this model should be completed.  It should be copied to the Order field on Requirement records created from this template.</description>
    <inlineHelpText>This optional field specifies the sequence in which Requirements based on this model should be completed.  It should be copied to the Order field on Requirement records created from this template.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>