force-app/main/default/objects/LLC_BI__Requirement_Template__mdt/fields/LLC_BI__Title__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Title__c</fullName>
    <description>This required field contains the user facing name of Requirements based on this model. It should be copied to the Name field on Requirement records created from this template.</description>
    <inlineHelpText>This required field contains the user facing name of Requirements based on this model. It should be copied to the Name field on Requirement records created from this template.</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>